# backend

./: .dockerignore  CMakeLists.txt  Dockerfile  Doxygen  README.md  build_and_run_backend.sh
doc/: code_snippets
include/: api.h  database_connection.h  database_utils.h  lws.h  lws_protocol.h  request_handler.h  testing.h
scripts/: test_db.sql
src/: database_connection.c  database_utils.c  lws.c  lws_protocol.c  lws_protocol_init.c  main.c  request_handler.c
